Rework some parts of ResourceCache; create an integration test; switch back to async events for agent leader election